fix: resolve rendering issues - updated gt logo to work on edge - hide resume render on mobile layout - use hashrouter to resolve gh-pages rendering issues on subpages - brighten some skill colors in dark mode

--- a/src/pages/Resume.module.css
+++ b/src/pages/Resume.module.css
@@ -22,3 +22,9 @@
         width: 80%;
     }
 }
+
+.resumeRender {
+    @media (max-width: $mantine-breakpoint-sm) {
+        display: none;
+    }
+}
